# demo-pytest-cov-issue

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: run.py
tests/: conftest.py  test.py
